--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,95 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@color/black">
-
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="411dp"
-        android:layout_height="381dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-        tools:srcCompat="@tools:sample/backgrounds/scenic"
-        android:contentDescription="@string/picture_heehee" />
-
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="411dp"
-        android:layout_height="56dp"
-        android:background="@color/black"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="New Post"
-        app:titleMarginStart="70dp"
-        app:titleTextColor="@color/white" />
-
-    <ImageButton
-        android:id="@+id/GoBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="@color/black"
-        android:clickable="true"
-        android:contentDescription="@android:string/VideoView_error_text_invalid_progressive_playback"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
-        android:focusable="true" />
-
-    <ImageButton
-        android:id="@+id/btnTakePicture"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="64dp"
-        android:backgroundTint="@color/black"
-        android:clickable="true"
-        android:contentDescription="@string/appbar_scrolling_view_behavior"
-        android:scaleType="fitCenter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@android:drawable/ic_menu_camera"
-        android:focusable="true" />
-
-    <ImageButton
-        android:id="@+id/btnSubmit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/black"
-        android:clickable="true"
-        android:contentDescription="@string/material_motion_easing_standard"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/GoBack"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        app:tint="#1497FF"
-        tools:ignore="ImageContrastCheck"
-        android:focusable="true" />
-
-    <EditText
-        android:id="@+id/description"
+    
+    <FrameLayout
+        android:id="@+id/flContainer"
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:layout_marginStart="1dp"
-        android:hint="@string/insert_the_funny"
-        android:textColor="@color/white"
-        android:textColorHint="#D5D5D5"
-        app:layout_constraintBottom_toTopOf="@+id/btnTakePicture"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        android:autofillHints=""
-        android:inputType="text" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#000000"
+        android:backgroundTint="@color/white"
+        app:itemIconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_bottom_navigation" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
